# FEMSimulator

./: README
1D/1DBar/: CMakeLists.txt  README  fem_utils.cpp  imports.h  input.txt  inputExplainer.txt  main.cpp
1D/1DBeam/: .gitignore  Makefile  README  fem_utils.cpp  fem_utils.h  input.txt  inputExplainer.txt  main.cpp
MeshGenerator/: .gitignore
